feat: product detail

--- a/src/style.css
+++ b/src/style.css
@@ -18,8 +18,10 @@
   --color-primary: #A1282C;
   --color-highlight:#297383;
   --color-gray: #F0F0F0;
+  --color-grayer: #D7D7D7;
   --color-dark-gray: #A3A3A3;
   --color-background: #FFFFFF;
+  --color-highlight: #E29A9C;
 }
 
 /* a {
