--- a/src/style.css
+++ b/src/style.css
@@ -16,7 +16,7 @@
 
 
   --color-primary: #A1282C;
-  --color-highlight:#297383;
+  --color-blue:#297383;
   --color-gray: #F0F0F0;
   --color-grayer: #D7D7D7;
   --color-dark-gray: #A3A3A3;
