--- a/src/style.css
+++ b/src/style.css
@@ -20,6 +20,7 @@
   --color-gray: #F0F0F0;
   --color-grayer: #D7D7D7;
   --color-dark-gray: #A3A3A3;
+  --color-darker-gray: #757575;
   --color-background: #FFFFFF;
   --color-highlight: #E29A9C;
 }
